--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-sectionContent
+sectionContent,article
 #sectionContent{
 	width:60%;
 	background:#dbb;
@@ -9,5 +9,13 @@ sectionContent
 	font-size:2em;
 	color:#480;
 }
-	
-	
+#article{
+	width:60%;
+	background:#dbb;
+	margin:32px;
+	border:32px solid#11bd92;
+	padding:32px;
+	font-family:Comic Sans MS;
+	font-size:2em;
+	color:#480;
+}
