--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 sectionContent{
 	width: 60%;
-	background: #dbb;
+	background: #DE8C12;
 	margin: 32px;
-	border: 32px solid#11bd92;
+	border: 32px solid#11BD92;
 	padding: 32px;
 	font-family: Comic Sans MS;
 	font-size: 2em;
-	color: #480;
+	color: #DEBF12;
 }
 
 
