--- a/style.css
+++ b/style.css
@@ -14,9 +14,36 @@
 	font-size: 0.8em;
 	line-height: 1.3em;
 }
-.img{
+#Me {
 	width: 45%;
 	height: 45%;
 }
-
+#dreamJob {
+	width: 45%;
+	height: 45%;
+}
+#16 personalitys {
+	width: 45%;
+	height: 45%;
+}
+#eduplaner {
+	width: 45%;
+	height: 45%;
+}
+#1.VIA Character strengths {
+	width: 45%;
+	height: 45%;
+}
+#ItemDrops {
+	width: 45%;
+	height: 45%;
+}
+#Characters {
+	width: 45%;
+	height: 45%;
+}
+#Maps {
+	width: 45%;
+	height: 45%;
+}
 
