--- a/style.css
+++ b/style.css
@@ -14,35 +14,35 @@
 	font-size: 0.8em;
 	line-height: 1.3em;
 }
-#Me {
+#Me img{
 	width: 45%;
 	height: 45%;
 }
-#dreamJob {
+#dreamJob img{
 	width: 45%;
 	height: 45%;
 }
-#16 personalitys {
+#16personalitys img {
 	width: 45%;
 	height: 45%;
 }
-#eduplaner {
+#eduplaner img {
 	width: 45%;
 	height: 45%;
 }
-#1.VIA Character strengths {
+#1.VIACharacterstrengths img{
 	width: 45%;
 	height: 45%;
 }
-#ItemDrops {
+#ItemDrops img{
 	width: 45%;
 	height: 45%;
 }
-#Characters {
+#Characters img{
 	width: 45%;
 	height: 45%;
 }
-#Maps {
+#Maps img{
 	width: 45%;
 	height: 45%;
 }
