--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@
 	line-height: 1.3em;
 }
 #Me img{
-	width: 45%;
-	height: 45%;
+	width: 10%;
+	height: 10%;
 }
 #dreamJob img{
 	width: 45%;
 	height: 45%;
 }
-#16personalitys img {
+#personalitys img {
 	width: 45%;
 	height: 45%;
 }
@@ -30,7 +30,7 @@
 	width: 45%;
 	height: 45%;
 }
-#1.VIACharacterstrengths img{
+#VIACharacterstrengths img{
 	width: 45%;
 	height: 45%;
 }
