--- a/style.css
+++ b/style.css
@@ -17,4 +17,38 @@
 .sectionTitle{
 	colour:#ffffff;
 	backround:#000000;
-
+}
+#Me img{
+	width: 10%;
+	height: auto:
+}
+#dreamJob img{
+	width: 30%;
+	height: auto:
+}
+#personalitys img{
+	width: 30%;
+	height: auto:
+}
+#eduplaner img{
+	width: 30%;
+	height: auto:
+}
+#VIACharacterstrengths img{
+	width: 30%;
+	height: auto:
+}
+#Map img{
+	width: 35%;
+	height: auto:
+}
+}
+#Characters img{
+	width: 35%;
+	height: auto:
+}
+}
+#ItemDrops img{
+	width: 35%;
+	height: auto:
+}
