--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 	line-height: 1.3em;
 }
 .sectionTitle{
-	colour:#ffffff;
-	backround:#000000;
+	colour:#000000;
+	backround:#ffffff;
 }
 #Me img{
 	width: 10%;
