--- a/style.css
+++ b/style.css
@@ -17,34 +17,34 @@ html, body {background: #8134AD; font-family:"Comic Sans MS", "Comic Sans", curs
 }
 #Me img{
 	width: 10%;
-	height: auto:
+	height: auto;
 }
 #dreamJob img{
 	width: 30%;
-	height: auto:
+	height: auto;
 }
 #personalitys img{
 	width: 30%;
-	height: auto:
+	height: auto;
 }
 #eduplaner img{
 	width: 30%;
-	height: auto:
+	height: auto;
 }
 #VIACharacterstrengths img{
 	width: 30%;
-	height: auto:
+	height: auto;
 }
 #Maps img{
 	width: 35%;
-	height: auto:
+	height: auto;
 }
 #Characters img{
 	width: 35%;
-	height: auto:
+	height: auto;
 }
 #ItemDrops img{
 	width: 35%;
-	height: auto:
+	height: auto;
 }
 
