--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	font-size: 1.2em;
 	line-height: 1.4em;
 }
-html, body {background: #000000; font-family:"Comic Sans MS", "Comic Sans", cursive; font-size: 18px; color: #DEBD12;}
+html, body {background: #0A0A0A; font-family:"Comic Sans MS", "Comic Sans", cursive; font-size: 18px; color: #DEBD12;}
 .p{
 	font-size: 0.8em;
 	line-height: 1.3em;
