--- a/style.css
+++ b/style.css
@@ -47,4 +47,8 @@ html, body {background: #0A0A0A; font-family:"Comic Sans MS", "Comic Sans", curs
 	width: 35%;
 	height: auto;
 }
+#cv{
+	width:90%;
+	width:750px;
+}
 
