--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 	font-size: 1.2em;
 	line-height: 1.4em;
 }
+.sectionContent img{
+	border:3px solid#8134AD;
+}
 html, body {background: #0A0A0A; font-family:"Comic Sans MS", "Comic Sans", cursive; font-size: 18px; color: #DEBD12;}
 .p{
 	font-size: 0.8em;
