--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 .sectionContent{
 	width: 60%;
-	background: #DE8C12;
+	background: #0F53BA;
 	margin: 32px;
 	border: 32px solid#8134AD;
 	padding: 32px;
+	font-family: "Arial, Helvetica", sans-serif;
 	font-size: 2em;
 	color: #DEBF12;
 	font-size: 1.2em;
 	line-height: 1.4em;
 }
 
-html, body {background: #0A0A0A; font-size: 18px; color: #DEBD12;}
+html, body {background: #0A0A0A;font-family: "Arial, Helvetica", sans-serif; font-size: 18px; color: #DEBD12;}
 
 .p{
 	font-size: 0.8em;
