--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html, body {background: #0A0A0A;font-family: "Arial, Helvetica", sans-serif; fon
 #Me img{
 	width: 12.5%;
 	height: auto;
+	float: right;
 }
 #dreamJob img{
 	width: 30%;
