--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html, body {background: #0A0A0A;font-family: "Arial, Helvetica", sans-serif; fon
 .p{
 	font-size: 0.8em;
 	line-height: 1.3em;
+	float: left;
 }
 #Me img{
 	width: 12.5%;
