--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 	color: #DEBF12;
 	font-size: 1.2em;
 	line-height: 1.4em;
+	vertical-align:baseline;
 }
 
 html, body {background: #0A0A0A;font-family: "Arial, Helvetica", sans-serif; font-size: 18px; color: #DEBD12;}
