--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
 	margin: 32px;
 	border: 32px solid#8134AD;
 	padding: 32px;
-	font-family: "Arial, Helvetica", sans-serif;
+	font-family: "Arial", "Helvetica", sans-serif;
 	font-size: 2em;
 	color: #DEBF12;
 	font-size: 1.2em;
 	line-height: 1.4em;
-	vertical-align:baseline;
+	vertical-align: baseline;
 }
 
-html, body {background: #0A0A0A;font-family: "Arial, Helvetica", sans-serif; font-size: 18px; color: #DEBD12;}
+html, body {background: #0A0A0A; font-family: "Arial", "Helvetica", sans-serif; font-size: 18px; color: #DEBD12;}
 
 .p{
 	font-size: 0.8em;
