--- a/style.css
+++ b/style.css
@@ -14,15 +14,19 @@
 
 html, body {background: #0A0A0A; font-family: "Arial", "Helvetica", sans-serif; font-size: 18px; color: #DEBD12;}
 
+#p{
+	float: right;
+}
 .p{
 	font-size: 0.8em;
 	line-height: 1.3em;
+}
+img{
 	float: left;
 }
 #Me img{
 	width: 12.5%;
 	height: auto;
-	float: right;
 }
 #dreamJob img{
 	width: 30%;
