--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
 	padding: 32px;
 	font-family: inherit;
 	font-size: 2em;
+	font-weight:normal;
+        font-style:normal;
 	color: #DEBF12;
 	font-size: 1.2em;
 	line-height: 1.4em;
 	vertical-align: baseline;
 }
 
-html, body {background: #0A0A0A; font-family: "Arial", "Helvetica", sans-serif; font-size: 18px; color: #DEBD12;}
+html, body {background: #0A0A0A; font-family: "Arial", "Helvetica", sans-serif; font-weight:normal;
+font-style:normal; font-size: 18px; color: #DEBD12;}
 
 #p{
 	float: left;
