--- a/style.css
+++ b/style.css
@@ -37,17 +37,17 @@ html, body {background: #0A0A0A; font-family: "Times New Roman", "Times", serif;
 }
 #Maps img{
 	width: 20%;
-	height: auto;
+	height: 20%;
 	float: right;
 }
 #Characters img{
 	width: 20%;
-	height: auto;
+	height: 20%;
 	float: right;
 }
 #ItemDrops img{
 	width: 20%;
-	height: auto;
+	height: 20%;
 	float: right;
 }
 #cv {
