--- a/style.css
+++ b/style.css
@@ -36,16 +36,16 @@ html, body {background: #0A0A0A; font-family: "Times New Roman", "Times", serif;
 	height: auto;
 }
 #Maps img{
-	width: 175px;
-	height: 247px;
+	width: 17%;
+	height: auto;
 }
 #Characters img{
-	width: 175px;
-	height: 247px;
+	width: 17%;
+	height: auto;
 }
 #ItemDrops img{
-	width: 175px;
-	height: 247px;
+	width: 17%;
+	height: auto;
 }
 #cv {
 	width: 85%;
