--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ html, body {background: #0A0A0A; font-family: "Times New Roman", "Times", serif;
 #Maps img{
 	width: 17%;
 	height: auto;
+	float: right;
+	overflow: auto;
 }
 #Characters img{
 	width: 17%;
