--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 	line-height: 1.4em;
 }
 
-html, body {background: #0A0A0A; font-family: "Times New Roman", "Times", serif; font-size: 14px; color: #DEBD12;}
+html, body,ul {background: #0A0A0A; font-family: "Times New Roman", "Times", serif; font-size: 14px; color: #DEBD12;}
 
 .p{
 	font-size: 0.8em;
